# garmin-golf-round-tracker

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  courses.json  manifest.xml  monkey.jungle  pyproject.toml
.github/: copilot-instructions.md
resources/layouts/: layout.xml
resources/strings/: strings.xml
source/: App.mc  ConfirmResetDelegate.mc  ConfirmResetView.mc  CourseSelectDelegate.mc  CourseSelectView.mc  EndDelegate.mc  EndView.mc  HoleSelectDelegate.mc  HoleSelectView.mc  SaveRoundDelegate.mc  SaveRoundView.mc  TrackerDelegate.mc  TrackerView.mc  courseData.mc  course_data.py  courses.py  golf-round-courseSelectDelegate.mc  golf-round-courseSelectView.mc  golf-round-endView.mc  golf-round-startDelegate.mc  golf-round-startView.mc  golf-round-trackerApp.mc  golf-round-trackerDelegate.mc  golf-round-trackerMenuDelegate.mc  golf-round-trackerView.mc
source/data/: courseData.mc
source/model/: RoundModel.mc
tools/: course_data.py  courses.py
tools/data/: courses.json
tools/templates/: courseData.mc.j2
